--- a/frontend/src/signIn.css
+++ b/frontend/src/signIn.css
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    font-family: 'Poppins', sans-serif;
 }
 
 .logreg-background {
